--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body class="flex items-center justify-center bg-zinc-900">
-    <section class="h-screen bg-white w-full max-w-[400px] relative">
+    <section class="h-dvh bg-white w-full max-w-[50px] relative">
       <div
         class="w-full bg-linear-to-b from-emerald-600 to-yellow-500 h-50 relative"
       >
