--- a/index2.html
+++ b/index2.html
@@ -214,7 +214,7 @@
               <div class="h-10 w-10 bg-zinc-200 rounded animate-pulse"></div>
               <div class="max-w-[200px] flex flex-col">
                 <p class="text-[0.7rem] text-zinc-800 font-semibold">
-                  Link Aja
+                  Ovo
                 </p>
                 <p class="text-[0.7rem] flex items-center text-amber-700">
                   <svg
