--- a/index2.html
+++ b/index2.html
@@ -130,7 +130,7 @@
         </section>
         <section class="grid grid-cols-5 gap-2">
           <div
-            class="flex flex-col justify-center items-center text-[0.6rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -138,7 +138,7 @@
             <p>Transfer</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.54rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -146,7 +146,7 @@
             <p>Bayar & Beli</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.6rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -155,7 +155,7 @@
             <p>QRIS</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.6rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -163,7 +163,7 @@
             <p>Berbagi</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.6rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -182,10 +182,10 @@
             >
               <div class="h-10 w-10 bg-zinc-200 rounded animate-pulse"></div>
               <div class="max-w-[200px] flex flex-col">
-                <p class="text-[0.7rem] text-zinc-800 font-semibold">
+                <p class="text-sm text-zinc-800 font-semibold">
                   Link Aja
                 </p>
-                <p class="text-[0.7rem] flex items-center text-amber-700">
+                <p class="text-sm flex items-center text-amber-700">
                   <svg
                     class="w-3 h-3"
                     aria-hidden="true"
@@ -213,10 +213,10 @@
             >
               <div class="h-10 w-10 bg-zinc-200 rounded animate-pulse"></div>
               <div class="max-w-[200px] flex flex-col">
-                <p class="text-[0.7rem] text-zinc-800 font-semibold">
+                <p class="text-sm text-zinc-800 font-semibold">
                   Ovo
                 </p>
-                <p class="text-[0.7rem] flex items-center text-amber-700">
+                <p class="text-sm flex items-center text-amber-700">
                   <svg
                     class="w-3 h-3"
                     aria-hidden="true"
