--- a/index2.html
+++ b/index2.html
@@ -130,7 +130,7 @@
         </section>
         <section class="grid grid-cols-5 gap-2">
           <div
-            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -138,7 +138,7 @@
             <p>Transfer</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -146,7 +146,7 @@
             <p>Bayar & Beli</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -155,7 +155,7 @@
             <p>QRIS</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
@@ -163,7 +163,7 @@
             <p>Berbagi</p>
           </div>
           <div
-            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 font-semibold text-zinc-800"
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
               class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
