--- a/index2.html
+++ b/index2.html
@@ -238,7 +238,7 @@
         </section>
       </div>
       <div
-        class="absolute bottom-0 left-0 w-full p-4 bg-white shadow-xl flex justify-between gap-4"
+        class="absolute bottom-0 left-0 w-full p-4 bg-white shadow-[0_-4px_6px_rgba(0,0,0,0.1)] flex justify-between gap-4"
       >
         <div class="grid grid-cols-2 gap-4 w-1/2">
           <div
@@ -256,7 +256,7 @@
         </div>
         <div class="w-full flex justify-center absolute left-1/2 -translate-x-1/2">
           <div
-            class="h-12 w-12 bg-zinc-300 rounded-full animate-pulse -mt-8 absolute"
+            class="h-12 w-12 bg-zinc-300 rounded-xl animate-pulse -mt-8 absolute"
           ></div>
         </div>
         <div class="grid grid-cols-2 gap-4 w-1/2">
