--- a/location.html
+++ b/location.html
@@ -1,33 +1,122 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Lokasi</title>
-  <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-    iframe { width: 100%; height: 500px; border: none; border-radius: 8px; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Lokasi (Form)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h2>Lokasi Terkini</h2>
-  <p id="coords"></p>
-  <iframe id="mapFrame"></iframe>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+  <div class="bg-white shadow-lg rounded-2xl p-6 max-w-2xl w-full">
+    <h2 class="text-2xl font-bold text-gray-800 mb-4 text-center">Masukkan Koordinat</h2>
+
+    <form id="coordForm" class="space-y-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <label for="lat" class="block text-sm font-medium text-gray-700">Latitude</label>
+          <input id="lat" name="lat" type="text" placeholder="-7.293684"
+            class="mt-1 block w-full rounded-lg border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500" />
+        </div>
+        <div>
+          <label for="lng" class="block text-sm font-medium text-gray-700">Longitude</label>
+          <input id="lng" name="lng" type="text" placeholder="108.191615"
+            class="mt-1 block w-full rounded-lg border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500" />
+        </div>
+      </div>
+
+      <div class="flex flex-wrap gap-2">
+        <button type="submit"
+          class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg shadow">Tampilkan Peta</button>
+        <button id="openMaps" type="button"
+          class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded-lg shadow">Buka di Google Maps</button>
+        <button id="copyLink" type="button"
+          class="px-4 py-2 bg-gray-200 hover:bg-gray-300 text-gray-800 rounded-lg shadow">Salin Link</button>
+      </div>
+
+      <p id="err" class="text-red-600 text-sm"></p>
+    </form>
+
+    <p id="coords" class="text-gray-700 font-medium mt-4">Koordinat belum diisi.</p>
+
+    <div class="mt-4 rounded-lg overflow-hidden shadow">
+      <iframe id="mapFrame" class="w-full h-96 border-0" title="Peta lokasi"></iframe>
+    </div>
+  </div>
 
   <script>
-    // Ambil parameter dari URL
-    const params = new URLSearchParams(window.location.search);
-    const lat = params.get("lat");
-    const lng = params.get("lng");
-
-    if (lat && lng) {
-      document.getElementById("coords").innerText = `Latitude: ${lat}, Longitude: ${lng}`;
-
-      // buat embed Google Maps
-      const embedUrl = `https://www.google.com/maps?q=${lat},${lng}&output=embed`;
-      document.getElementById("mapFrame").src = embedUrl;
-    } else {
-      document.getElementById("coords").innerText = "Parameter tidak valid!";
+    function normalizeNumber(input) {
+      if (input == null) return null;
+      const s = String(input).trim().replace(/\s+/g, '').replace(',', '.');
+      const n = parseFloat(s);
+      return (isFinite(n)) ? n : null;
     }
+    function formatCoord(n) {
+      return (typeof n === 'number') ? n.toFixed(6) : n;
+    }
+
+    const params = new URLSearchParams(window.location.search);
+    const latInput = document.getElementById('lat');
+    const lngInput = document.getElementById('lng');
+    const form = document.getElementById('coordForm');
+    const errEl = document.getElementById('err');
+    const coordsEl = document.getElementById('coords');
+    const iframe = document.getElementById('mapFrame');
+    const openMapsBtn = document.getElementById('openMaps');
+    const copyLinkBtn = document.getElementById('copyLink');
+
+    if (params.get('lat')) latInput.value = params.get('lat');
+    if (params.get('lng')) lngInput.value = params.get('lng');
+
+    function updateUI(latVal, lngVal) {
+      coordsEl.textContent = `Latitude: ${formatCoord(latVal)}, Longitude: ${formatCoord(lngVal)}`;
+      const embedUrl = `https://www.google.com/maps?q=${latVal},${lngVal}&output=embed`;
+      iframe.src = embedUrl;
+
+      openMapsBtn.onclick = () => {
+        window.open(`https://www.google.com/maps?q=${latVal},${lngVal}`, '_blank');
+      };
+
+      const newUrl = `${location.pathname}?lat=${encodeURIComponent(formatCoord(latVal))}&lng=${encodeURIComponent(formatCoord(lngVal))}`;
+      history.replaceState(null, '', newUrl);
+
+      copyLinkBtn.onclick = async () => {
+        try {
+          await navigator.clipboard.writeText(location.href);
+          copyLinkBtn.textContent = 'Tersalin ✓';
+          setTimeout(() => copyLinkBtn.textContent = 'Salin Link', 1500);
+        } catch (e) {
+          copyLinkBtn.textContent = 'Gagal Salin';
+          setTimeout(() => copyLinkBtn.textContent = 'Salin Link', 1500);
+        }
+      };
+    }
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      errEl.textContent = '';
+
+      const rawLat = latInput.value;
+      const rawLng = lngInput.value;
+      const latNum = normalizeNumber(rawLat);
+      const lngNum = normalizeNumber(rawLng);
+
+      if (latNum === null || lngNum === null) {
+        errEl.textContent = 'Latitude atau Longitude tidak valid. Gunakan angka, contoh: -7.293684 atau -7,293684';
+        return;
+      }
+
+      updateUI(latNum, lngNum);
+    });
+
+    (function tryInitFromUrl() {
+      const rawLat = latInput.value;
+      const rawLng = lngInput.value;
+      if (!rawLat || !rawLng) return;
+      const latNum = normalizeNumber(rawLat);
+      const lngNum = normalizeNumber(rawLng);
+      if (latNum === null || lngNum === null) return;
+      updateUI(latNum, lngNum);
+    })();
   </script>
 </body>
 </html>
