--- a/cek-lokasi/index.html
+++ b/cek-lokasi/index.html
@@ -15,12 +15,12 @@
         <div>
           <label for="lat" class="block text-sm font-medium text-gray-700">Latitude</label>
           <input id="lat" name="lat" type="text" placeholder="-7.293684"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"  />
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "  />
         </div>
         <div>
           <label for="lng" class="block text-sm font-medium text-gray-700">Longitude</label>
           <input id="lng" name="lng" type="text" placeholder="108.191615"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"  />
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "  />
         </div>
       </div>
 
