--- a/index.html
+++ b/index.html
@@ -25,12 +25,65 @@
       }
     </style>
   </head>
+  <script>
+    window.addEventListener("DOMContentLoaded", function () {
+      const loadingScreen = document.getElementById("loading-screen");
+      setTimeout(() => {
+        loadingScreen.style.opacity = "0";
+        setTimeout(() => {
+          loadingScreen.style.display = "none";
+        }, 1000); // waktu transisi
+      }, 5000);
+    });
+  </script>
   <body class="flex items-center justify-center bg-zinc-900">
+    <div
+      class="h-dvh w-full bg-teal-600 max-w-[500px] shrink-0 fixed top-0 z-20 flex justify-center items-center transition-opacity duration-1000"
+      id="loading-screen"
+    >
+      <div
+        class="fixed flex items-center justify-center z-30 w-full max-w-[500px] bottom-0 shrink-0 bg-linear-to-b from-teal-600 to-yellow-500 h-20"
+      >
+        <span class="text-white animate-pulse">Loading...</span>
+      </div>
+      <div class="flex flex-col gap-1 text-white">
+        <svg
+          height="250"
+          viewBox="0 0 76 84"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          class="-mt-20"
+        >
+          <path
+            d="M52.4805 36.96C65.47 36.9602 76 47.4909 76 60.4805C75.9997 73.4698 65.4698 83.9997 52.4805 84H0V0H50.2822C60.4883 0.000168653 68.7617 8.27435 68.7617 18.4805C68.7615 28.6864 60.4881 36.9598 50.2822 36.96H52.4805Z"
+            fill="url(#paint0_linear_200_94)"
+          />
+          <path
+            d="M18.0128 73.4885L4.92432 73.2384L5.03279 67.5633C5.05185 66.5663 5.20206 65.7317 5.48342 65.0594C5.76487 64.3828 6.15387 63.8766 6.65044 63.5409C7.14708 63.2009 7.72773 63.0372 8.39238 63.05C8.87383 63.0592 9.31063 63.1741 9.7028 63.3947C10.095 63.611 10.4217 63.9113 10.6829 64.2957C10.9398 64.6799 11.1146 65.1265 11.2071 65.6355L11.3349 65.6379C11.367 65.0759 11.5195 64.5674 11.7924 64.1123C12.0611 63.6571 12.4282 63.2976 12.8935 63.0337C13.3546 62.7697 13.894 62.6437 14.5118 62.6555C15.2276 62.6691 15.861 62.8688 16.412 63.2544C16.963 63.6357 17.3918 64.1724 17.6982 64.8645C18.0046 65.5565 18.1488 66.3776 18.1306 67.3277L18.0128 73.4885ZM15.2432 69.881L15.275 68.2194C15.2864 67.6229 15.1841 67.1734 14.9683 66.8709C14.7482 66.5684 14.4187 66.4129 13.9799 66.4045C13.6731 66.3986 13.4119 66.464 13.1961 66.6005C12.9804 66.737 12.8147 66.9342 12.699 67.192C12.5833 67.4455 12.522 67.7533 12.5151 68.1155L12.4823 69.8282L15.2432 69.881ZM10.2839 69.7862L10.3117 68.3291C10.3177 68.018 10.2739 67.7423 10.1805 67.5018C10.0871 67.2614 9.95001 67.0734 9.76933 66.9378C9.58447 66.7978 9.35783 66.7253 9.08942 66.7202C8.68466 66.7125 8.373 66.8514 8.15443 67.1371C7.93161 67.4226 7.81596 67.787 7.80749 68.2301L7.77866 69.7383L10.2839 69.7862ZM5.14383 61.754L5.21956 57.7916L10.5856 55.3369L10.5876 55.2347L5.31924 52.5767L5.39498 48.6143L14.2759 53.5918L18.3916 53.6704L18.3242 57.1982L14.2085 57.1195L5.14383 61.754ZM12.1863 35.8155C13.6434 35.8433 14.8671 36.1501 15.8576 36.7359C16.8437 37.3216 17.5853 38.1009 18.0825 39.0736C18.5753 40.0463 18.8104 41.1248 18.7878 42.3093C18.765 43.5022 18.4866 44.5752 17.9527 45.5283C17.4146 46.477 16.6416 47.2251 15.6338 47.7727C14.6218 48.316 13.3915 48.5738 11.9429 48.5461C10.4858 48.5182 9.26414 48.2136 8.27791 47.6321C7.2875 47.0463 6.54583 46.2692 6.05288 45.3008C5.55575 44.3281 5.31859 43.2452 5.34139 42.0523C5.36403 40.8678 5.64232 39.7991 6.17626 38.846C6.70593 37.8929 7.4768 37.1426 8.48887 36.5951C9.49668 36.0475 10.7291 35.7876 12.1863 35.8155ZM12.1164 39.471C11.3324 39.4561 10.6701 39.5478 10.1292 39.7463C9.58423 39.9405 9.16939 40.2373 8.88472 40.6368C8.59586 41.0319 8.44582 41.5234 8.43458 42.1114C8.42334 42.6993 8.55445 43.1984 8.82791 43.6085C9.0972 44.0143 9.50039 44.3268 10.0375 44.5459C10.5704 44.7606 11.2289 44.8755 12.0128 44.8905C12.7968 44.9055 13.4612 44.8159 14.0062 44.6217C14.5471 44.4232 14.9619 44.1264 15.2507 43.7313C15.5354 43.3318 15.6834 42.8381 15.6946 42.2502C15.7059 41.6622 15.5768 41.1653 15.3075 40.7595C15.0341 40.3494 14.6309 40.037 14.098 39.8222C13.5609 39.6031 12.9003 39.486 12.1164 39.471ZM5.88989 22.7217L18.9784 22.9719L18.9217 25.9372L11.9547 30.535L11.9533 30.6117L18.8299 30.7432L18.7619 34.2965L5.67343 34.0463L5.73108 31.0298L12.671 26.5082L12.673 26.406L5.82197 26.275L5.88989 22.7217ZM19.1068 16.255L19.0105 21.2911L5.92201 21.0409L6.01729 16.056C6.04303 14.7097 6.32728 13.5515 6.87007 12.5816C7.40867 11.6073 8.17303 10.8633 9.16314 10.3494C10.1491 9.83126 11.3237 9.5852 12.6871 9.61126C14.0505 9.63732 15.2171 9.926 16.1868 10.4773C17.1523 11.0285 17.8878 11.797 18.3932 12.7827C18.8943 13.7683 19.1322 14.9257 19.1068 16.255ZM16.062 17.6801L16.0879 16.3252C16.1002 15.6776 16.0064 15.1239 15.8063 14.664C15.6064 14.1998 15.253 13.8436 14.7463 13.5952C14.2397 13.3426 13.5305 13.2076 12.6187 13.1902C11.707 13.1727 10.9931 13.2827 10.4771 13.52C9.96117 13.7531 9.59431 14.1041 9.3765 14.573C9.15877 15.0377 9.0434 15.6109 9.03037 16.2926L9.00642 17.5452L16.062 17.6801Z"
+            fill="white"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_200_94"
+              x1="38"
+              y1="0"
+              x2="38"
+              y2="84"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#FEBC2F" />
+              <stop offset="1" stop-color="#058887" />
+            </linearGradient>
+          </defs>
+        </svg>
+        <p>By BSI</p>
+      </div>
+    </div>
     <section
       class="h-dvh bg-white w-full max-w-[500px] relative overflow-auto scrollbar-hide"
     >
       <div
-        class="w-full bg-linear-to-b from-emerald-600 to-yellow-500 h-50 relative"
+        class="w-full bg-linear-to-b from-teal-600 to-yellow-500 h-50 relative"
       >
         <div
           class="absolute bg-linear-to-b from-yellow-500 to-white h-10 -bottom-8 w-full"
@@ -78,11 +131,11 @@
         </header>
         <section class="flex items-center gap-2">
           <div
-            class="h-9 w-9 rounded-full object-cover text-white font-semibold flex items-center justify-center bg-emerald-800"
+            class="h-9 w-9 rounded-full object-cover text-white font-semibold flex items-center justify-center bg-teal-800"
           >
-            G
+            C
           </div>
-          <h2 class="text-white">Gina</h2>
+          <h2 class="text-white">Chandra</h2>
         </section>
 
         <section class="rounded-xl bg-white p-4 my-4 shadow">
@@ -135,7 +188,7 @@
             class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
-              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+              class="h-12 w-full max-w-12 bg-teal-600/30 rounded-full flex items-center justify-center animate-pulse"
             ></div>
             <p>Transfer</p>
           </div>
@@ -143,7 +196,7 @@
             class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
-              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+              class="h-12 w-full max-w-12 bg-teal-600/30 rounded-full flex items-center justify-center animate-pulse"
             ></div>
             <p>Bayar & Beli</p>
           </div>
@@ -151,7 +204,7 @@
             class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
-              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+              class="h-12 w-full max-w-12 bg-teal-600/30 rounded-full flex items-center justify-center animate-pulse"
             ></div>
             <p>QRIS</p>
           </div>
@@ -159,7 +212,7 @@
             class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
-              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+              class="h-12 w-full max-w-12 bg-teal-600/30 rounded-full flex items-center justify-center animate-pulse"
             ></div>
             <p>Berbagi</p>
           </div>
@@ -167,7 +220,7 @@
             class="flex flex-col justify-center items-center text-[0.8rem] gap-1 text-zinc-800"
           >
             <div
-              class="h-12 w-full max-w-12 bg-emerald-600/30 rounded-full flex items-center justify-center animate-pulse"
+              class="h-12 w-full max-w-12 bg-teal-600/30 rounded-full flex items-center justify-center animate-pulse"
             ></div>
             <p>Menu</p>
           </div>
