--- a/index.html
+++ b/index.html
@@ -25,22 +25,67 @@
       }
     </style>
   </head>
-  <script>
-    window.addEventListener("DOMContentLoaded", function () {
-      const loadingScreen = document.getElementById("loading-screen");
-      setTimeout(() => {
-        loadingScreen.style.opacity = "0";
-        setTimeout(() => {
-          loadingScreen.style.display = "none";
-        }, 1000); // waktu transisi
-      }, 3000);
-    });
-  </script>
   <body class="flex items-center justify-center bg-zinc-900">
+    <script>
+      window.addEventListener("DOMContentLoaded", function () {
+        // Tampilkan login dengan transisi dari bawah
+        setTimeout(() => {
+          const login = document.getElementById("login");
+          login.classList.remove("translate-y-full", "opacity-0");
+          login.classList.add("translate-y-0", "opacity-100");
+        }, 200);
+
+        // Handle submit login
+        const loginForm = document.getElementById("login-form");
+        if (loginForm) {
+          loginForm.addEventListener("submit", function (e) {
+            e.preventDefault();
+            const loadingScreen = document.getElementById("loading-screen");
+            loadingScreen.style.opacity = "0";
+            setTimeout(() => {
+              loadingScreen.style.display = "none";
+            }, 1000);
+          });
+        }
+      });
+    </script>
     <div
       class="h-dvh w-full bg-teal-600 max-w-[500px] shrink-0 fixed top-0 z-20 flex justify-center items-center transition-opacity duration-1000"
       id="loading-screen"
     >
+      <div
+        class="absolute bg-white shadow-sm h-96 w-full bottom-0 z-40 translate-y-full opacity-0 transition-all duration-700 flex items-center justify-center"
+        id="login" style="border-radius: 20px 20px 0 0;"
+      >
+        <form
+          class="w-full max-w-full mx-auto flex flex-col gap-4 p-6"
+          id="login-form"
+        >
+          <h2 class="text-2xl font-semibold text-center text-teal-700 mb-2">
+            Login
+          </h2>
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            required
+            class="border border-teal-800 rounded-xl px-3 py-2 focus:outline-none focus:ring-2 focus:ring-teal-500"
+          />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required
+            class="border border-teal-800 rounded-xl px-3 py-2 focus:outline-none focus:ring-2 focus:ring-teal-500"
+          />
+          <button
+            type="submit"
+            class="bg-teal-600 text-white rounded-xl py-2 font-semibold hover:bg-teal-700 transition"
+          >
+            Login
+          </button>
+        </form>
+      </div>
       <div
         class="fixed flex items-center justify-center z-30 w-full max-w-[500px] bottom-0 shrink-0 bg-linear-to-b from-teal-600 to-yellow-500 h-20"
       >
