--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
           <div
             class="h-9 w-9 rounded-full object-cover text-white font-semibold flex items-center justify-center bg-teal-800"
           >
-            C
+            R
           </div>
-          <h2 class="text-white">Chandra</h2>
+          <h2 class="text-white">Randi</h2>
         </section>
 
         <section class="rounded-xl bg-white p-4 my-4 shadow">
